--- a/src/Header.css
+++ b/src/Header.css
@@ -34,6 +34,15 @@
     font-size: 13px;
     font-weight: 800;
 }
+.header__optionBasket{
+    display: flex;
+    align-items: center;
+    color: white;
+}
+.header__basketCount{
+    margin-left: 10px;
+    margin-right: 10px;    
+}
 .header__nav{
     display: flex;
     justify-content: space-evenly;
@@ -43,5 +52,5 @@
     flex-direction: column;
     margin-left: 10px;
     margin-right: 10px;
-    color: white; 
+    color: darkcyan; 
 }
